fix to collapsible caret alignment

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -13,6 +13,7 @@
 }
 :root {
   --std-animation: all 0.5s ease;
+  --fa-display: inline-block;
 
   // original sample from PDF: #c9181a
   --ironsworn-color-red-light: hsl(355, 100%, 65%);
